--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,8 @@
 
 
 .card__face {
-  position: absolute;
+  position: fixed;
+  align-self: center;
   width: 100%;
   height: 100%;
   -webkit-backface-visibility: hidden;
@@ -37,6 +38,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  align-self: auto;
 }
 
 .card__face--front h2 {
